--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 
 <body ng-app="App">
     <div ng-controller="MainCtrl as main" ng-cloak>
-        <input ng-model="main.newItem" ng-change="main.addItem()">
+        <input ng-model="main.newItem" ng-change="main.updateItem()">
         <p>mid element is: {{main.mid}} </p>
     </div>
 
     <div ng-controller="SecondCtrl as second" style="margin-top:20px;">
-        <input ng-model="second.newItem" ng-change="second.addItem()">
+        <input ng-model="second.newItem" ng-change="second.updateItem()">
         <p>mid element is: {{second.mid}} </p>
     </div>
 </body>
